--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
 
     compileOptions {
         //sourceCompatibility JavaVersion.VERSION_1_8
-       // targetCompatibility JavaVersion.VERSION_1_8
+        // targetCompatibility JavaVersion.VERSION_1_8
         sourceCompatibility 1.8
         targetCompatibility 1.8
     }
@@ -31,18 +31,23 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation 'com.google.android.gms:play-services-places:16.0.0'
 
     //async
     implementation 'com.loopj.android:android-async-http:1.4.9'
     //json
     implementation 'org.json:json:20160212'
 
+    //card views
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
+    //Arcore
     implementation 'com.google.ar:core:1.5.0'
 
     // Provides ArFragment, and other UX resources.
